objects/PC_SupportPlanActivityLog__c.object
<CustomObject>
    <description>Custom object to store Support Plan Activity Logs</description>
    <fields>
        <fullName>PC_ActionRecordId__c</fullName>
        <description>Id of record on which action is performed as part of Support plan Activity</description>
        <label>Action Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ActionRecordModifiedTime__c</fullName>
        <description>Used to store Last modified Date Time of record on which action is performed using Support Plan</description>
        <label>Action Record Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_LogDateTime__c</fullName>
        <description>Date/Time at which Support Plan Activity Log is logged or update</description>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_RuntimeUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who triggered the Support plan initiation</description>
        <label>Runtime User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PC_SupportPlanActivityLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <description>Determines if the corresponding Support Plan Activity execution is in progress or completed.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_SupportPlanActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Plan Activity using which the new Record is created</description>
        <label>Support Plan Activity</label>
        <referenceTo>PC_SupportPlanActivity__c</referenceTo>
        <relationshipLabel>Support Plan Activity Logs</relationshipLabel>
        <relationshipName>PC_SupportPlanActivityLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlanRuntime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Plan Runtime which was used to execute Support Plan Activity</description>
        <label>Support Plan Runtime</label>
        <referenceTo>PC_SupportPlanRuntime__c</referenceTo>
        <relationshipLabel>Support Plan Activity Logs</relationshipLabel>
        <relationshipName>PC_SupportPlanActivityLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_TransactionId__c</fullName>
        <description>Unique ID generated for each transaction when Support Plan is initiated</description>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TriggerRecordId__c</fullName>
        <description>Id of Record which triggered Support Plan</description>
        <label>Trigger Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Support Plan Activity Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_ActionRecordId__c</columns>
        <columns>PC_LogDateTime__c</columns>
        <columns>PC_RuntimeUser__c</columns>
        <columns>PC_Status__c</columns>
        <columns>PC_SupportPlanActivity__c</columns>
        <columns>PC_SupportPlanRuntime__c</columns>
        <columns>PC_TriggerRecordId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPAL-{000000}</displayFormat>
        <label>Support Plan Activity Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Plan Activity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>